[tool.poetry]
name = "l13-linear-regression"
version = "0.1.0"
description = ""
authors = ["vorSherer <tcpma2011@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
sklearn = "^0.0"
matplotlib = "^3.2.2"
jupyterlab = "^2.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
